--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.game-area
+{
+    display: flex;
+    padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.player-list
+{
+    display: inline-block;
+    margin: 10px 15px;
+    padding: 10px;
+    border: solid 1px #000;
+    background: #e5e5e5;
+    width: 200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.player-list h3
+{
+    margin-top: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.player-list ul
+{
+    padding-left: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.player-list ul li
+{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.play-field
+{
+    display: inline-block;
+    margin: 10px 15px 10px 0;
+    padding: 10px;
+    width: 50%;
+    border: solid 1px #000;
+}
+
+.card
+{
+    display: inline-block;
+    font-size: 100px;
 }
